# msvc-cmake-xtensa

./: CMakeLists.txt  CMakeSettings.json  xtensa-cross.cpp
