# CMakeList.txt : CMake project for xtensa-cross, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("xtensa-cross")

# Add source to this project's executable.
add_executable (xtensa-cross "xtensa-cross.cpp" )

# TODO: Add tests and install targets if needed.
